# ai-image-analyzer

./: .gitignore  AI_COLLABORATION.md  CONSTRAINTS.md  README.md  build_apk.py  main.py  pyproject.toml  requirements-dl.txt  requirements-server.txt  requirements.txt  run.py  server.py  test_flet_log.txt  test_flet_log2.txt
docs/: METRICS.md
docs/verification/: benchmark_report.md  benchmark_results.json  package_check.md  run_log.md
src/analyzer/: __init__.py  ai_analyzer.py  contrast.py  decoder.py  dl_scorer.py  exposure.py  noise.py  scorer.py  sharpness.py
src/app/: main.py
test_samples/: manifest.json
test_samples/formats/: sample.heic
tests/: generate_samples.py  run_benchmark.py  test_ai_analyzer.py  test_quality_core.py
