[project]
name = "image-quality-analyzer"
version = "1.0.0"
description = "AI 图像画质分析工具"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.85.0",
    "opencv-python==4.10.0.84",
    "numpy==1.26.4",
    "Pillow==10.4.0",
    "google-generativeai>=0.5.0",
]

[project.optional-dependencies]
heic = [
    "pillow-heif>=0.13.0",
]
dl = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pyiqa>=0.1.12",
]

[tool.flet]
product = "画质分析工具"
org = "com.iqa"
bundle_id = "com.iqa.quality"
build_number = 1
permissions = ["photo_library", "internet"]

[tool.flet.app]
module = "run"
exclude = [
    ".git/**",
    ".pytest_cache/**",
    "build/**",
    "docs/**",
    "test_samples/**",
    "test_samples_personal/**",
    "tests/**",
    "**/__pycache__/**",
    ".gitignore",
    "*.pyc",
    "test_flet_log.txt",
    "test_flet_log2.txt",
]

[tool.flet.android]
split_per_abi = true
min_sdk_version = 24
target_sdk_version = 35

[tool.flet.android.permission]
"android.permission.READ_MEDIA_IMAGES" = true
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true

[tool.flet.android.meta_data]
"flutter.network.policy" = "cleartext"
